# CryptoAlrt

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini
notification_service/: Dockerfile  alembic.ini
notification_service/src/: main.py
notification_service/src/application/interfaces/: __init__.py  email_client.py  repositories.py
notification_service/src/application/use_cases/: check_and_reserve.py  process_alert_triggered_use_case.py  send_email_notification.py
notification_service/src/config/: broker.py  cache.py  database.py  smtp.py
notification_service/src/domain/: exceptions.py
notification_service/src/domain/entities/: notification.py  user_preference.py
notification_service/src/domain/enums/: __init__.py  channel.py  status.py
notification_service/src/domain/events/: alert_triggered.py
notification_service/src/domain/value_objects/: email_message.py  idempotency_key.py  message.py
notification_service/src/infrastructures/: di_container.py  exceptions.py  providers.py
notification_service/src/infrastructures/broker/: broker.py
notification_service/src/infrastructures/cache/: base.py  redis.py
notification_service/src/infrastructures/consumer/: alert_triggered_consumer.py
notification_service/src/infrastructures/migrations/: env.py
notification_service/src/infrastructures/redis/: redis.py
notification_service/src/infrastructures/smtp/: send_email.py
notification_service/tests/: conftest.py
notification_service/tests/application/use_cases/: test_check_and_reserve.py  test_send_email_notification.py
notification_service/tests/domain/: test_notification_entity.py  test_user_preference.py
notification_service/tests/helpers/: fakes.py  mocks.py  providers.py
notification_service/tests/infrastructures/broker/: test_consumer.py
notification_service/tests/infrastructures/database/: test_cached_user_preference.py  test_notification_db_mapper.py  test_notification_repository.py  test_user_preference_repository.py
notification_service/tests/infrastructures/fixtures/: event_fixtures.py  notification_fixtures.py  user_preference_fixtures.py
portfolio_tracker/: Dockerfile  main.py  pyproject.toml
portfolio_tracker/src/application/: exceptions.py
portfolio_tracker/src/application/interfaces/: __init__.py  repositories.py
portfolio_tracker/src/application/use_cases/: add_asset_to_portfolio.py  calculate_asset_change.py  calculate_weight.py  change_asset_amount.py  change_asset_ticker.py  get_analytics.py  initiate_portfolio.py  recalculate_portfolio_change.py
portfolio_tracker/src/config/: cache.py
portfolio_tracker/src/domain/: exceptions.py
portfolio_tracker/src/domain/entities/: asset_entity.py  (+2 more)
portfolio_tracker/src/infrastructures/: exceptions.py
portfolio_tracker/tests/: conftest.py
portfolio_tracker/tests/domain/: test_asset_entity.py
portfolio_tracker/tests/fixtures/: application_fixtures.py  domain_fixtures.py  infra_fixtures.py
portfolio_tracker/tests/infrastructures/: test_portfolio_repository.py
price-traking-service/src/: main.py
price-traking-service/src/config/: broker.py  coingecko.py  logging.py  scheduler.py
price-traking-service/src/domain/: exceptions.py
price-traking-service/src/infrastructures/: di_container.py
price-traking-service/static/: app.js  index.html  styles.css
price-traking-service/tests/application/: test_alert_dto.py  test_cryptocurrency_dto.py  test_price_updated_event_dto.py
price-traking-service/tests/domain/: test_alert_entity.py  test_cryptocurrency_entity.py  test_price_updated_event.py  test_price_value_object.py  test_threshold_value_object.py
price-traking-service/tests/infrastructures/: test_alert_db_mapper.py  test_alert_mapper.py  test_coingecko_client.py  test_cryptocurrency_db_mapper.py  test_kafka_publisher.py  test_price_updated_event_mapper.py
price_tracking_service/: Dockerfile  alembic.ini
price_tracking_service/docs/: use_cases.md
price_tracking_service/src/: __init__.py  main.py
price_tracking_service/src/config/: broker.py  coingecko.py  cors.py  database.py  event.py  logging.py  redis.py  scheduler.py
price_tracking_service/src/domain/: exceptions.py
price_tracking_service/src/infrastructures/: exceptions.py  providers.py
price_tracking_service/tests/: conftest.py
price_tracking_service/tests/application/: test_alert_dto.py  test_cryptocurrency_dto.py  test_price_updated_event_dto.py
price_tracking_service/tests/domain/: test_alert_entity.py  test_cryptocurrency_entity.py  test_price_updated_event.py  test_price_value_object.py  test_threshold_value_object.py
price_tracking_service/tests/infrastructures/: test_alert_db_mapper.py  test_alert_mapper.py  test_coingecko_client.py  test_cryptocurrency_db_mapper.py  test_cryptocurrency_mapper.py  test_kafka_publisher.py  test_price_update_consumer.py  test_price_updated_event_mapper.py  test_providers.py
siws_login_service/: Dockerfile  main.py  pyproject.toml
siws_login_service/docs/: domain_methods
siws_login_service/src/config/: broker.py  cors.py  database.py  jwt.py
siws_login_service/src/domain/: exceptions.py
siws_login_service/src/infrastructures/: alembic.ini  di_container.py  exceptions.py
siws_login_service/tests/: WRITE_TESTS_PLAN.md  conftest.py
siws_login_service/tests/application/: test_request_signature_use_case.py  test_revoke_session_use_case.py  test_terminate_sessions_use_case.py  test_tokens_issuer_use_case.py  test_verify_signature.py
siws_login_service/tests/domain/: TESTS_TO_WRITE.md  test_message_vo.py  test_nonce_entity.py  test_nonce_vo.py  test_signature_vo.py  test_token_vo.py  test_wallet_address_vo.py  test_wallet_entity.py  test_wallet_session_vo.py
siws_login_service/tests/fixtures/: application_fixtures.py  domain_fixtures.py  infra_fixtures.py
siws_login_service/tests/helpers/: fakes.py  mocks.py
siws_login_service/tests/infrastructures/: test_jwt.py  test_nonce_repository.py  test_signature_verifier.py  test_wallet_mapper.py  test_wallet_repository.py  test_wallet_session_mapper.py
(+197 files in other folders)
